# otranscribe

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  FUTURE_FEATURES.md  Makefile  README.md  Untitled  pyproject.toml  requirements-faster.txt  requirements-local.txt  sample.txt
.github/: CODEOWNERS.md
.github/workflows/: branch-name.yml  ci.yml  publish.yml
docs/: CLI.md  CONTRIBUTING.md  DEMOS.md  DEVELOPMENT.md  INSTALLATION.md  MAINTAINERS.md  PUBLISHING.md  TROUBLESHOOTING.md  USAGE.md
scripts/: bootstrap.sh  test.sh
src/otranscribe/: __init__.py  cache.py  cli.py  doctor.py  faster_stt.py  ffmpeg_utils.py  local_stt.py  openai_stt.py  render.py
tests/: conftest.py  test_doctor.py  test_ffmpeg_utils.py  test_render.py
