[project]
name = "otranscribe"
version = "0.1.0"
description = "Transcribe any audio or video via OpenAI STT. Supports diarisation and cleaned rendering."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "YOUR_NAME" } ]
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
otranscribe = "otranscribe.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]