[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "otranscribe"
dynamic = ["version"]
description = "Transcribe any audio or video via OpenAI STT. Supports diarisation and cleaned rendering."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "Ines Lino" } ]
dependencies = [
  "requests>=2.31.0,<3",
]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+(?:rc\\d+)?)$"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "src/otranscribe/_version.py"

[project.urls]
Homepage = "https://github.com/ineslino/otranscribe"
Issues = "https://github.com/ineslino/otranscribe/issues"

[project.scripts]
otranscribe = "otranscribe.cli:main"

# Optional dependencies.  The ``local`` extra pulls in the ``openai-whisper``
# package which is required for the offline Whisper engine.  Users can
# install ``otranscribe[local]`` to enable the local engine.
[project.optional-dependencies]
local = [
    "openai-whisper>=20230314",
]

# The ``faster`` extra installs the faster‑whisper backend.  It offers
# significant performance improvements over the reference implementation by
# leveraging CTranslate2 and supports quantisation.  See
# https://github.com/guillaumekln/faster-whisper for details.
faster = [
    "faster-whisper>=0.10.0",
]

# Development dependencies.  Installing ``otranscribe[dev]`` pulls in
# tools needed to run the test suite.  Keep this list minimal to
# avoid bloating end user installations.
dev = [
  "pytest>=7.0.0",
  "black>=24.10.0",
  "ruff>=0.6.9",
  "pre-commit>=3.8.0",
  "setuptools-scm>=8",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Black
[tool.black]
line-length = 88
target-version = ["py39"]

# Ruff
[tool.ruff]
line-length = 88
target-version = "py39"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by Black

[tool.ruff.lint.isort]
known-first-party = ["otranscribe"]
